--- a/src/app/components/feature/feature.component.html
+++ b/src/app/components/feature/feature.component.html
@@ -1,5 +1,5 @@
 <div class="feature-section">
-    <h2 class="section-title">TẠI SAO NÊN HỌC TIẾNG TRUNG TẠI DENGFUCHINESE EDUCATION</h2>
+    <h2 class="section-title">TẠI SAO NÊN HỌC TIẾNG TRUNG TẠI TRUNG TÂM TIẾNG TRUNG DENGFU</h2>
     <div class="features-container">
         <div class="feature-item">
             <div class="feature-icon">
