--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,31 +2,48 @@
   <div class="footer-content">
     <div class="container">
       <div class="footer-grid">
-        <!-- Liên Kết Khác -->
-        <div class="footer-section">
-          <h3>LIÊN KẾT KHÁC</h3>
-          <h4>Các đường dẫn hữu ích</h4>
+        <!-- Fanpage Section -->
+        <div class="footer-section fanpage-section">
+          <h3>FANPAGE</h3>
+          <div class="fb-page-wrapper">
+            <div class="fb-page"
+                 data-href="https://www.facebook.com/profile.php?id=61569702407315"
+                 data-tabs="timeline"
+                 data-width="340"
+                 data-height="400"
+                 data-small-header="false"
+                 data-adapt-container-width="true"
+                 data-hide-cover="false"
+                 data-show-facepile="true">
+              <blockquote cite="https://www.facebook.com/profile.php?id=61569702407315"
+                          class="fb-xfbml-parse-ignore">
+                <a href="https://www.facebook.com/profile.php?id=61569702407315">
+                  Trung Tâm Tiếng Trung DengFu
+                </a>
+              </blockquote>
+            </div>
+          </div>
         </div>
 
         <!-- Điều Hướng Dịch Vụ -->
         <div class="footer-section">
           <h3>DỊCH VỤ</h3>
           <div class="service-grid">
-            <a href="#">Thông Báo Tuyển Dụng</a>
-            <a href="#">Đào Tạo Trực Tuyến</a>
-            <a href="#">Hệ Thống Đào Tạo</a>
-            <a href="#">Đào Tạo Sau Đại Học</a>
-            <a href="#">Đánh Giá Giảng Dạy</a>
-            <a href="#">Dịch Vụ Mạng</a>
-            <a href="#">Email Trường</a>
-            <a href="#">Dịch Vụ Sinh Viên</a>
-            <a href="#">Điện Thoại Nội Bộ</a>
-            <a href="#">Hoạt Động Campus</a>
-            <a href="#">Website Chuyên Đề</a>
-            <a href="#">Trung Tâm Khảo Thí</a>
-            <a href="#">Đào Tạo Cán Bộ</a>
-            <a href="#">Thông Tin Công Khai</a>
-            <a href="#">Công Khai Giáo Dục</a>
+            <a href="#" title="Thông Báo Tuyển Dụng">Thông Báo Tuyển Dụng</a>
+            <a href="#" title="Đào Tạo Trực Tuyến">Đào Tạo Trực Tuyến</a>
+            <a href="#" title="Hệ Thống Đào Tạo">Hệ Thống Đào Tạo</a>
+            <a href="#" title="Đào Tạo Sau Đại Học">Đào Tạo Sau Đại Học</a>
+            <a href="#" title="Đánh Giá Giảng Dạy">Đánh Giá Giảng Dạy</a>
+            <a href="#" title="Dịch Vụ Mạng">Dịch Vụ Mạng</a>
+            <a href="#" title="Email Trường">Email Trường</a>
+            <a href="#" title="Dịch Vụ Sinh Viên">Dịch Vụ Sinh Viên</a>
+            <a href="#" title="Điện Thoại Nội Bộ">Điện Thoại Nội Bộ</a>
+            <a href="#" title="Hoạt Động Campus">Hoạt Động Campus</a>
+            <a href="#" title="Website Chuyên Đề">Website Chuyên Đề</a>
+            <a href="#" title="Trung Tâm Khảo Thí">Trung Tâm Khảo Thí</a>
+            <a href="#" title="Đào Tạo Cán Bộ">Đào Tạo Cán Bộ</a>
+            <a href="#" title="Thông Tin Công Khai">Thông Tin Công Khai</a>
+            <a href="#" title="Công Khai Giáo Dục">Công Khai Giáo Dục</a>
           </div>
         </div>
 
@@ -35,17 +52,20 @@
           <h3>LIÊN HỆ</h3>
           <h4>Thông tin liên lạc</h4>
           <div class="contact-info">
-            <p>Cơ sở Huế: 154 Bà Triệu, Phường Xuân Phú, Quận Thuận Hoá, Thành Phố Huế, Việt Nam</p>
+            <p>
+              Cơ sở Huế: 154 Bà Triệu, Phường Xuân Phú, Quận Thuận Hoá, Thành
+              Phố Huế, Việt Nam
+            </p>
             <p>Điện thoại: +84 789830123</p>
             <p>Email: contact&#64;dengfuchinese.asia</p>
           </div>
           <div class="quick-links">
             <h4>Liên Kết Nhanh</h4>
             <div class="links-grid">
-              <a href="#">Trung Tâm Tư Vấn Tâm Lý</a>
-              <a href="#">Câu Lạc Bộ Tiếng Anh</a>
-              <a href="#">Hỗ Trợ Sinh Viên</a>
-              <a href="#">Doanh Nghiệp Trường</a>
+              <a href="#" title="Trung Tâm Tư Vấn Tâm Lý">Trung Tâm Tư Vấn Tâm Lý</a>
+              <a href="#" title="Câu Lạc Bộ Tiếng Anh">Câu Lạc Bộ Tiếng Anh</a>
+              <a href="#" title="Hỗ Trợ Sinh Viên">Hỗ Trợ Sinh Viên</a>
+              <a href="#" title="Doanh Nghiệp Trường">Doanh Nghiệp Trường</a>
             </div>
           </div>
         </div>
@@ -57,10 +77,11 @@
   <div class="footer-bottom">
     <div class="container">
       <div class="footer-logo">
-        <img src="../../../assets/logo/ngang3-removebg.png" alt="Logo Dengfu">
+        <img src="../../../assets/logo/ngang3-removebg.png" alt="Logo Dengfu" />
       </div>
       <div class="copyright">
-        ©{{currentYear}} Dengfu Chinese Education Center | ICP số 06106464 | Bảo trì website: Trung tâm Công nghệ HRS
+        ©{{ currentYear }} Trung Tâm Tiếng Trung DengFu  | ICP số 06106464 |
+        Bảo trì website: Trung tâm Công nghệ HRS
       </div>
     </div>
   </div>
