--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,6 +43,7 @@ $breakpoints: (
 
 /* Typography */
 body {
+  transition: all 0.3s ease;
   margin: 0;
   font-family: "Montserrat", serif;
   color: var(--neutral-900);
